# backend

./: .editorconfig  .gitignore  add_waterfall_data_db.ipynb  default.env  docker-compose.yml  pyproject.toml
db/: models.py
service/: __main__.py  csv_methods.py  handles.py  serializers.py  waterfalls.py
service/clients/: twitter.py
service/csv_data/: read_csv.py  waterfalls_details.csv
service/functional/: handles.py  waterfalls_basemodel.py
service/models/: db.py  db_add_method.py  db_add_metod.py  models.py
service/repositories/: add_waterfall_data_db.ipynb  clean_waterfalls_csv.ipynb  waterfalls_details.csv
service/tools/: __main__.py  validator.py
