[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Valentine Makarov <octopulus96@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
httpx = "^0.19.0"
SQLAlchemy = "^1.4.25"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]
pgcli = "^3.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
