[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Valentine Makarov <octopulus96@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
httpx = "^0.19.0"
SQLAlchemy = "^1.4.25"
Flask = "^2.0.2"
pydantic = "^1.8.2"
jupyter = "^1.0.0"
ipython = "^7.28.0"
ipython-sql = "^0.4.0"
orjson = "^3.6.4"
psycopg2-binary = "^2.9.1"

[tool.poetry.dev-dependencies]
pgcli = "^3.2.0"
flake8 = "^3.9.2"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
